<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backgroud"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/texto_pregunta"
        android:text="@string/pregunta_3"
        style="@style/EstiloTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/grupo_opciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/texto_pregunta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <!-- Las RadioButtons dentro del RadioGroup -->
        <RadioButton
            android:id="@+id/opcion_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_7" />

        <RadioButton
            android:id="@+id/opcion_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_8" />

        <RadioButton
            android:id="@+id/opcion_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_9" />

    </RadioGroup>

    <Button
        android:id="@+id/boton_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grupo_opciones" />

</androidx.constraintlayout.widget.ConstraintLayout>
